name of the data

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# for Maven
 target/
 pom.xml.tag
 pom.xml.releaseBackup
@@ -11,6 +12,7 @@ buildNumber.properties
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
 
+# for Intellij
 .idea/
 *.iml
 *.iws
