--- a/pom.xml
+++ b/pom.xml
@@ -20,10 +20,15 @@
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
-            <version>${kotlin.version}</version>
+            <version>${kotlin.version}</version>  
+        </dependency> 
+             
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
         </dependency>
-
-
     </dependencies>
 
     <build>
@@ -60,6 +65,11 @@
                     <execution>
                         <id>compile</id>
                         <goals> <goal>compile</goal> </goals>
+                    </execution>
+                         
+                    <execution>
+                        <id>test-compile</id>
+                        <goals> <goal>test-compile</goal> </goals>
                     </execution>
 
                 </executions>
