--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,20 @@
             <artifactId>junit</artifactId>
             <version>4.12</version>
             <scope>test</scope>
+        </dependency>  
+             
+            
+        <dependency>
+            <groupId>com.univocity</groupId>
+            <artifactId>univocity-parsers</artifactId>
+            <version>2.5.2</version>
         </dependency>
+             
+             
     </dependencies>
 
+         
+         
     <build>
         <sourceDirectory>${project.basedir}/src/Main/kotlin</sourceDirectory>
         <plugins>
